# type_traits

./: .drone.star  .travis.yml  CMakeLists.txt  appveyor.yml  build.jam  changes pending.txt  index.html
.drone/: boost.sh
doc/: detected.qbk  detected_or.qbk  enable_if.qbk  history.qbk  intrinsics.qbk  is_detected.qbk  is_detected_convertible.qbk  is_detected_exact.qbk  is_nothrow_swappable.qbk  make_void.qbk  nonesuch.qbk  transform_traits.qbk  type_traits.qbk  value_traits.qbk
meta/: explicit-failures-markup.xml
module/: type_traits.cxx
test/: CMakeLists.txt  Jamfile.v2  decay_test.cpp  has_binary_classes0_test.cpp  has_binary_operators.hpp  has_complement_test.cpp  has_equal_to_test.cpp  has_greater_equal_test.cpp  has_greater_test.cpp  has_left_shift_test.cpp  has_less_equal_test.cpp  has_less_test.cpp  has_multiplies_test.cpp  has_not_equal_to_test.cpp  has_nothrow_assign_test.cpp  has_nothrow_constr_test.cpp  has_nothrow_copy_test.cpp  has_nothrow_destructor_test.cpp  has_plus_assign_test.cpp  has_plus_test.cpp  has_prefix_operators.hpp  has_right_shift_test.cpp  has_trivial_assign_test.cpp  has_trivial_constr_test.cpp  has_trivial_copy_test.cpp  has_trivial_destructor_test.cpp  has_trivial_move_assign_test.cpp  has_trivial_move_constructor_test.cpp  has_unary_minus_test.cpp  has_unary_plus_test.cpp  integral_constant_test.cpp  is_complete_test.cpp  is_constructible_test.cpp  is_convertible_test.cpp  is_default_constr_test.cpp  is_destructible_test.cpp  is_final_test.cpp  is_function_test.cpp  is_list_constructible_test.cpp  is_member_func_test.cpp  (+12 more)
(+278 files in other folders)
